# index_rel_qqq

ndx_levered_etf_mapper/: .env.example  .gitignore  CHANGELOG.md  DEBUG_PLAYBOOK.md  README.md  TODO.md  TODO_MEGA_SPRINT.md  TODO_MEGA_SPRINT_STATUS.md  TODO_SPRINT.md  TODO_SPRINT_STATUS.md  TODO_STATUS.md  TODO_STATUS_QA.md  TODO_STATUS_SCAFFOLDS.md  decisions_form.html  pyproject.toml
ndx_levered_etf_mapper/app/: debug_bundle.py  flight_recorder.py  ladder_styles.py  local_oauth.py  schwab_diagnostics.py  streamlit_app.py  streamlit_new_ui.py
ndx_levered_etf_mapper/config/: decisions_inbox_schema.json
ndx_levered_etf_mapper/notebooks/: 01_explore_universe.ipynb  02_notebook.ipynb
ndx_levered_etf_mapper/scripts/: _tmp_todo_parse.py  audit_ndx100.py  bench_all_quotes.ps1  bench_schwab_quotes.js  bench_schwab_quotes.ps1  bench_schwab_quotes.py  bench_schwab_refresh.py  decisions_listener.py  dexter_bridge.py  make_debug_bundle.py  mega_mark_all_done.py  metrics_24h.py  mh_doctor.py  options_probe.py  overnight_run.bat  overnight_run.ps1  overnight_run.py  run_overnight_commit.cmd  run_overnight_now.cmd  schwab_callback_server.py  schwab_smoke.py  todo_mega_sprint_gen.py  todo_mega_status_gen.py  todo_sprint_status_gen.py  todo_status_gen.py
ndx_levered_etf_mapper/src/etf_mapper/: agent_runner.py  bootstrap.py  build.py  build_prices.py  build_universe.py  classify.py  cli.py  (+3 more)
ndx_levered_etf_mapper/src/etf_mapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ndx_levered_etf_mapper/tests/: test_config.py  test_spade_checks.py
(+36 files in other folders)
