[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-mapper"
version = "0.1.0"
description = "Nasdaq-100 constituents to leveraged/inverse/options-strategy ETF relationship mapper"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "pypdf>=4.0",
  "pyarrow>=15.0",
  "networkx>=3.2",
  "python-dotenv>=1.0",

  # Market data bootstrap (free sources; replace with Schwab/TOS later)
  "yfinance>=0.2.36",
  "pandas-datareader>=0.10.0",

  # UI
  "streamlit>=1.32",
  "plotly>=5.20",
  "pyvis>=0.3.2",
  "streamlit-autorefresh>=1.0.1",
]


[project.optional-dependencies]
dev = [
  "jupyterlab>=4.0",
  "ipykernel>=6.29",
  "ruff>=0.6",
  "pytest>=8.0",
  "openai>=1.0",
  "openai-agents>=0.0.0",
]

[project.scripts]
etf-mapper = "etf_mapper.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
